# TerrainTileBuilder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Config.h.in
include/Reflection/: IObject.h  Reflector.h
include/TerrainTileBuilder/: ICore.h  TerrainTileBuilder.h
include/TerrainTileBuilder/CCore/: CIDW.h
include/Utils/: KdTree.h  Point.h  PyTrigger.h  TextureEncoder.h  Utils.h
include/Utils/Geo/: GeoUtils.h
pyUtils/: bin_resource_builder.py  convert_coordinates.py  run.py
pyUtils/app/: __init__.py
pyUtils/app/main/: routes.py
src/: main.cpp
src/Reflection/: Reflector.cpp
src/TerrainTileBuilder/: TerrainTileBuilder.cpp
src/TerrainTileBuilder/CCore/: CIDW.cpp
src/Utils/: PyTrigger.cpp  TextureEncoder.cpp  Utils.cpp
src/Utils/Geo/: GeoUtils.cpp  KdTree.cpp
